# snakemake-software-deployment-plugin-cvmfs

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: intro.md
src/snakemake_software_deployment_plugin_cvmfs/: __init__.py
tests/: a_module.lua  test_plugin.py
