[project]
name = "snakemake-software-deployment-plugin-cvmfs"
version = "0.1.0"
description = "A snakemake plugin to use CernVM-FS (cvmfs) as software deployment (backend)"
authors = [
    {name = "Izaskun Mallona",email = "izaskun.mallona@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
